--- a/main.html
+++ b/main.html
@@ -25,11 +25,11 @@
       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRP5V-i2mjlcnF5h-HBDsqwn-KOOwfT_lWyDoNdKleNBC6Ici8l0KF21434gxdtm16s4dk&usqp=CAU" class="d-block w-100" alt="...">
     </div>
   </div>
-  <button class="carousel-control-prev glyphicon-chevron-left carousel-control left" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+  <button class="carousel-control-prev glyphicon-chevron-left carousel-control left glyphicon " type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next glyphicon-chevron-right carousel-control right" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+  <button class="carousel-control-next glyphicon-chevron-right carousel-control right glyphicon" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
